correction mesure batterie

--- a/data/index.htm
+++ b/data/index.htm
@@ -128,7 +128,7 @@
 					</h5>
 					<div class="card-body text-center">
 						<p class="card-text">
-							<span id="val_eco2">400</span> ppm (0,4%)
+							<span id="val_eco2">400</span> ppm
 						</p>
 					</div>
 					<div class="card-footer">
@@ -165,8 +165,8 @@
 				<p>
 					adresse IP : <span id="IPserveurWS"></span>
 				</p>
-				<p id="affModeSelect" class="text-center">
-					mode sélectionné
+				<p class="text-center">
+					<span id="val_batt">-</span> % (<span id="val_battVolt">-</span> V)
 				</p>
 			</div>
 			<div class="col-md-4">
@@ -175,6 +175,14 @@
 				</p>
 			</div>
 			<div class="col-md-4">
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-12">
+				<div id="logText">
+				-
+				</div>
 			</div>
 		</div>
 	</div>
