--- a/data/index.htm
+++ b/data/index.htm
@@ -179,7 +179,7 @@
 		</div>
 
 		<div class="row">
-			<div class="col-md-12">
+			<div class="col-md-12" style="height:100px;">
 				<div id="logText">
 				-
 				</div>
