--- a/data/index.htm
+++ b/data/index.htm
@@ -24,7 +24,7 @@
 
 <body>
 	<div class="container-fluid">
-		<nav class="navbar navbar-expand-lg navbar-light bg-">
+		<nav class="navbar navbar-default navbar-fixed-top navbar-expand-mg navbar-light">
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
 				data-target="#bs-navbar-1" aria-controls="bs-navbar-1" aria-expanded="true">
