pression en uint16t

--- a/data/index.htm
+++ b/data/index.htm
@@ -68,7 +68,7 @@
 					</h5>
 					<div class="card-body text-center">
 						<p class="card-text">
-							<span id="val_temp">20,0</span> °C 
+							<span id="val_temp">-</span> °C 
 						</p>
 					</div>
 					<div class="card-footer">
@@ -83,7 +83,7 @@
 					</h5>
 					<div class="card-body text-center">
 						<p class="card-text">
-							<span id="val_hygro">50</span> %HR
+							<span id="val_hygro">-</span> %HR
 						</p>
 					</div>
 					<div class="card-footer">
@@ -98,7 +98,7 @@
 					</h5>
 					<div class="card-body text-center">
 						<p class="card-text">
-							<span id="val_hygroAbs">10</span> mg/m <sup>3</sup>
+							<span id="val_hygroAbs">-</span> mg/m <sup>3</sup>
 						</p>
 					</div>
 					<div class="card-footer">
@@ -113,7 +113,7 @@
 					</h5>
 					<div class="card-body text-center">
 						<p class="card-text">
-							<span id="val_pression">1012</span> hPa
+							<span id="val_pression">-</span> hPa
 						</p>
 					</div>
 					<div class="card-footer">
@@ -128,7 +128,7 @@
 					</h5>
 					<div class="card-body text-center">
 						<p class="card-text">
-							<span id="val_eco2">400</span> ppm
+							<span id="val_eco2">-</span> ppm
 						</p>
 					</div>
 					<div class="card-footer">
@@ -143,7 +143,7 @@
 					</h5>
 					<div class="card-body text-center">
 						<p class="card-text">
-							<span id="val_tcov">10</span> ppb
+							<span id="val_tcov">-</span> ppb
 						</p>
 					</div>
 					<div class="card-footer">
