--- a/data/index.htm
+++ b/data/index.htm
@@ -70,11 +70,11 @@
 					</h5>
 					<div class="card-body text-center">
 						<p class="card-text">
-							<span id="val_temp">-</span> °C 
+							<span id="val_temp">-</span>
 						</p>
 					</div>
 					<div class="card-footer">
-						Card footer
+						°c
 					</div>
 				</div>
 			</div>
@@ -85,11 +85,11 @@
 					</h5>
 					<div class="card-body text-center">
 						<p class="card-text">
-							<span id="val_hygro">-</span> %HR
+							<span id="val_hygro">-</span>
 						</p>
 					</div>
 					<div class="card-footer">
-						Card footer
+						% HR
 					</div>
 				</div>
 			</div>
@@ -100,11 +100,11 @@
 					</h5>
 					<div class="card-body text-center">
 						<p class="card-text">
-							<span id="val_hygroAbs">-</span> mg/m <sup>3</sup>
+							<span id="val_hygroAbs">-</span>
 						</p>
 					</div>
 					<div class="card-footer">
-						Card footer
+						mg/m <sup>3</sup>
 					</div>
 				</div>
 			</div>
@@ -115,11 +115,11 @@
 					</h5>
 					<div class="card-body text-center">
 						<p class="card-text">
-							<span id="val_pression">-</span> hPa
+							<span id="val_pression">-</span>
 						</p>
 					</div>
 					<div class="card-footer">
-						Card footer
+						hPa
 					</div>
 				</div>
 			</div>
@@ -130,11 +130,11 @@
 					</h5>
 					<div class="card-body text-center">
 						<p class="card-text">
-							<span id="val_eco2">-</span> ppm
+							<span id="val_eco2">-</span>
 						</p>
 					</div>
 					<div class="card-footer">
-						Card footer
+						ppm
 					</div>
 				</div>
 			</div>
@@ -145,11 +145,11 @@
 					</h5>
 					<div class="card-body text-center">
 						<p class="card-text">
-							<span id="val_tcov">-</span> ppb
+							<span id="val_tcov">-</span>
 						</p>
 					</div>
 					<div class="card-footer">
-						Card footer
+						ppb
 					</div>
 				</div>
 			</div>
